### 2.0.1  - Added noImplicitAny  - package rename to match npm's requirements

--- a/example/index.html
+++ b/example/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <body>
     <head>
-        <script src="../bin/QuartzStorage.min.js"></script>
+        <script src="../bin/quartz-storage.min.js"></script>
         <script type="text/javascript">
             var QS = Quartz.Storage.getInstance();
 
