--- a/tests/coverage.html
+++ b/tests/coverage.html
@@ -13,7 +13,7 @@
         <script src="../node_modules/mocha/mocha.js"></script>
         <script src="../node_modules/chai/chai.js"></script>
         <script src="../node_modules/blanket/dist/mocha/blanket_mocha.js"></script>
-        <script src="../bin/QuartzStorage.js" data-cover></script>
+        <script src="../bin/quartz-storage.js" data-cover></script>
 
         <script>mocha.setup('bdd')</script>
         <script src="test.js"></script>
